# glasbey

./: .readthedocs.yaml  LICENSE  README.md  README.rst  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg
doc/: api.rst  color_vision_deficiency.ipynb  conf.py  creating_block_palettes.ipynb  creating_palettes.ipynb  extending_palettes.ipynb  index.rst  requirements.txt
glasbey/: __init__.py  _converters.py  _glasbey.py  _grids.py  _internals.py  _optimizers.py
glasbey/tests/: test_converters.py  test_glasbey.py  test_grids.py  test_internals.py
