[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "glasbey"
version = "0.3.0"
authors = [{name = "Leland McInnes", email = "leland.mcinnes@gmail.com"}]
maintainers = [{name = "Leland McInnes", email = "leland.mcinnes@gmail.com"}]
description = "Algorithmically generate categorical color palettes"
readme = "README.rst"
keywords = ["color", "palette", "categorical"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
urls = {Homepage = "https://github.com/lmcinnes"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "numba>=0.56",
    "colorspacious>=1.1",
    "matplotlib>=3.5",
    "scikit-learn>=1.1",
]

[dependency-groups]
cicd = ["pytest", "pytest-azurepipelines", "pytest-cov"]

[tool.setuptools]
zip-safe = false
packages = ["glasbey"]
include-package-data = false
