[metadata]
name = glasbey
version = 0.2.0
author = Leland McInnes
author_email = leland.mcinnes@gmail.com
maintainer = Leland McInnes
maintainer_email = leland.mcinnes@gmail.com
description = Algorithmically generate categorical color palettes
long_description = file: README.rst
keywords = color, palette, categorical
url = https://github.com/lmcinnes
license = MIT License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[options]
zip_safe = False
packages = glasbey
python_requires = >=3.9
install_requires =
    numpy>=1.21
    numba>=0.56
    colorspacious>=1.1
    matplotlib>=3.5
    scikit-learn>=1.1